--- a/index.html
+++ b/index.html
@@ -87,23 +87,31 @@
 
 			</section>
 		     <section class="cards">
+
 				 <div class="cards-main">
 						<div class="cards-item dark">
-							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-							<path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-							</svg>
-							<h3 class="cards-item-title">FULLY RESPONSIVE</h3>
-							<p>Kanter is fully responsive, you can view it also in the mobile/tablets devices and it looks very in more devices.</p>
+							<div class="filter"></div>
+							<div class="cards-item-single">
+								<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+									<path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+								</svg>
+								<h3 class="cards-item-title">FULLY RESPONSIVE</h3>
+								<p>Kanter is fully responsive, you can view it also in the mobile/tablets devices and it looks very in more devices.</p>
+							</div>
 						</div>
 						<div class="cards-item black">
-							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-							</svg>
-							<h3 class="cards-item-title">WITH LOVE</h3>
-							<p>Kanter developed with love and attention to detail, each block, and each button did not remain without attention</p>
+							<div class="filter"></div>
+							<div class="cards-item-single">
+								<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+								</svg>
+								<h3 class="cards-item-title">WITH LOVE</h3>
+								<p>Kanter developed with love and attention to detail, each block, and each button did not remain without attention</p>
+							</div>
 						</div>
 						<div class="cards-item dark">
+							<div class="filter"></div>
 							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-window" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" d="M14 2H2a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1zM2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
 							<path fill-rule="evenodd" d="M15 6H1V5h14v1z"/>
@@ -113,6 +121,7 @@
 							<p>Made for developers, agencies, photographers, corporations, web studios, designers, bloggers and creative people.</p>
 						</div>
 						<div class="cards-item black">
+							<div class="filter"></div>
 							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-display" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 							<path d="M5.75 13.5c.167-.333.25-.833.25-1.5h4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75z"/>
 							<path fill-rule="evenodd" d="M13.991 3H2c-.325 0-.502.078-.602.145a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3zM14 2H2C0 2 0 4 0 4v6c0 2 2 2 2 2h12c2 0 2-2 2-2V4c0-2-2-2-2-2z"/>
@@ -126,7 +135,7 @@
 			 <section class="sell">
 				 <div class="sell-item">
 					 <h2 class="sell-title">LIKE OUR CREATIVE DEMOS ? </h2>
-					 <button class="sell-btm"> <a href="#">Buy kanter now!</a></button>
+					 <button class="sell-btm"> <a href="#">BUY KANTER NOW!</a></button>
 				 </div>
 				 </section>
 			 </section>
